# irispi

./: .gitignore  README.md  pyproject.toml  requirements.txt
iris_poetry/: .env  main.py  process_message.py
iris_poetry/irrigation/: irrigation.py
iris_poetry/irrigation_manager/: irrigation.py
iris_poetry/sensor_data/: __init__.py  eye_sensor.py  sensor_data.py
iris_poetry/system_config/: config_manager.py  default_config.json  system_config.py  test_sysconfig.py
